Try to prevent zoom-to-input on iOS devices

--- a/src/assets/css/utilities/input.css
+++ b/src/assets/css/utilities/input.css
@@ -1,6 +1,6 @@
 .input {
   padding: 0.5rem 1rem;
-  font-size: 0.875rem;
+  font-size: 1rem;
   border: 1px solid var(--text);
   border-radius: var(--border-rounded);
   background: transparent;
